tests/textual/error/modInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin modInteger)(con bool True)](con integer 10)])